# conductor-gateway

./: .gitignore  .pre-commit-config.yaml  BACKEND_SCHEDULER_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COUNCILOR_SCHEDULER_BACKEND.md  Dockerfile  LICENSE  README.md  check_councilor.py  conductor.md  config.yaml.example  coverage.xml  docker-compose.yml  primoia.md  pyproject.toml  pytest.ini  run_tests.py  test_file_path_functionality.py  test_scheduler.py  test_screenplay_id.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conductor-gateway-docker-ci.yml  docker.yml  lint.yml  release.yml  release.yml.disabled  test.yml
docs/: 002-backend-gerenciamento-roteiros.md
docs/api_examples/: screenplay_update_isdeleted.md
docs/architecture/: 01_gateway_overview.md
docs/guides/: 01_local_setup.md  02_api_usage.md
docs/history/sagas/: 01_decouple_shared_lib.md  02_tests_and_documentation.md
docs/sagas/SAGA-008/: fase-1-core-apis.md  fase-2-versionamento.md  plan.md  playbook.state.json
scripts/: migrate_screenplay_file_path.py  migrate_screenplay_last_used.py
src/: __init__.py  main.py
src/api/: app.py  models.py  websocket.py
src/api/routers/: __init__.py  agents.py  conversations.py  councilor.py  mcp_binder.py  mcp_registry.py  navigation.py  persona.py  persona_version.py  portfolio.py  screenplays.py
src/clients/: __init__.py  conductor_client.py
src/config/: settings.py
src/core/: __init__.py  database.py  mcp_binder.py
src/mcps/: __init__.py  base.py  conductor_mcp.py  database_mcp.py  mcp_manager.py  observations_mcp.py  prospector_mcp.py  registry.py
src/middleware/: __init__.py  validation_middleware.py
src/models/: __init__.py  councilor.py  mcp_binder.py  mcp_registry.py  persona.py  persona_version.py  screenplay.py
src/server/: __init__.py  advanced_server.py
src/services/: __init__.py  councilor_scheduler.py  councilor_service.py  mcp_mesh_service.py  mcp_registry_service.py  persona_service.py  persona_validator.py  persona_version_service.py  persona_version_validator.py  qdrant_service.py  screenplay_service.py  sse_event_consumer.py
src/tools/: __init__.py  cleanup_orphan_instances.py  conductor_advanced_tools.py
src/utils/: duplicate_detector.py  file_path_validator.py  markdown_validator.py  mcp_utils.py
tests/: conftest.py  test_persona_models.py  test_persona_router.py  test_persona_service.py  test_persona_validator.py  test_screenplay_deletion.py  test_tasks_api.py
tests/integration/: test_app_integration.py
tests/unit/: test_api.py  test_config.py  test_file_path_validator.py  test_mcp_server.py  test_screenplay_file_path.py  test_screenplays_api.py  test_utils.py
