[tool.poetry]
name = "conductor-gateway"
version = "0.1.0"
description = "Conductor Gateway - Autonomous MCP Server"
authors = ["Primoia Team"]
readme = "README.md"
packages = [{include = ".", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
cachetools = "5.5.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
google-generativeai = "^0.8.5"
uvicorn = "^0.36.0"
fastapi = "^0.116.2"
pyyaml = "6.0.2"
langchain-openai = "^0.3.33"
langchain-anthropic = "^0.3.20"
langchain-community = "^0.3.29"
langchain-core = "^0.3.76"
mcp = "^1.14.1"
mcp-use = "^1.3.10"
httpx = "^0.28.1"
requests = "^2.32.5"
aiohttp = "^3.12.15"
beautifulsoup4 = "^4.13.5"
playwright = "^1.55.0"
selenium = "^4.35.0"
webdriver-manager = "^4.0.2"
pymongo = "^4.15.1"
boto3 = "^1.40.35"
groq = "^0.31.1"
fireworks-ai = "^0.19.19"
ollama = "^0.5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
isort = "^5.12.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"